oprava argo za argocd

--- a/appka.yaml
+++ b/appka.yaml
@@ -8,7 +8,7 @@ spec:
   source:
     repoURL: https://github.com/TarkanJ/argocd.git
     targetRevision: HEAD
-    path: argo/first-argo-app
+    path: argocd/first-argo-app
     directory:
       recurse: true
   destination:
