--- a/service.yaml
+++ b/service.yaml
@@ -2,11 +2,11 @@ apiVersion: v1
 kind: Service
 metadata:
   name: martino-service
-  namespace: martino-app
+  namespace: first-argo-app
 spec:
   selector:
     app: httpbin
   ports:
     - protocol: TCP
       port: 80
-      targetPort: 80
+      targetPort: 6000
