--- a/service.yaml
+++ b/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: martino-service
+  name: argo-service
   namespace: first-argo-app
 spec:
   selector:
