--- a/deployment.yaml
+++ b/deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: argo-deployment
-  namespace: martino-app
+  namespace: argocd
   labels:
     app: httpbin
 spec:
