--- a/appka.yaml
+++ b/appka.yaml
@@ -5,6 +5,8 @@ metadata:
   namespace: argocd
 spec:
   project: martino-project
+  selector:
+    app: first-argo-app
   source:
     repoURL: https://github.com/TarkanJ/argocd.git
     targetRevision: HEAD
